--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^14.1.3",
+    "react-loader-spinner": "^6.1.6",
     "react-loading-skeleton": "^3.4.0",
     "react-paginate": "^8.2.0",
     "react-places-autocomplete": "^7.3.0",
